--- a/DesignPattern/src/Pattern1/BuilderPattern/建造者模式.md
+++ b/DesignPattern/src/Pattern1/BuilderPattern/建造者模式.md
@@ -22,3 +22,10 @@
 
 		* 建造者模式所创建的产品一般具有较多的共同点,其组成部分相似,如果产品之间的差异性很大,则不适合使用建造者模式,因此其适用范围会受到一定的限制.
 		* 如果产品的内部变化复杂,可能会导致需要定义很多具体建造者类来实现这种变化.会导致系统变得很庞大.
+
+* 总结
+   * 通过上?对建造者模式的使?，已经可以摸索出?点?得。那就是什么时候会选择这样的设计模
+  式，当： ?些基本物料不会变，?其组合经常变化的时候 ，就可以选择这样的设计模式来构建代码。
+   * 此设计模式满?了单?职责原则以及可复?的技术、建造者独?、易扩展、便于控制细节?险。但
+  同时当出现特别多的物料以及很多的组合后，类的不断扩展也会造成难以维护的问题。但这种设计
+  结构模型可以把?复的内容抽象到数据库中，按照需要配置。这样就可以减少代码中?量的?复。
