--- a/DesignPattern/src/Pattern1/BuilderPattern/建造者模式.md
+++ b/DesignPattern/src/Pattern1/BuilderPattern/建造者模式.md
@@ -1,31 +1,32 @@
-# 建造者模式
-* 定义 : 将一个复杂的对象的构建与它的表示分离,使得同样的构建过程可以创建不同的表示.也就是说用户不需要知道一个复杂的对象时如何创建的.用户只需要知道使用构造不同对象的方法(Director)就能得到一个完整的复杂对象的实例
-	* 建造者模式通常包含的几个角色
+[toc]
+# 一、定义 : 
+将一个复杂的对象的构建与它的表示分离,使得同样的构建过程可以创建不同的表示.也就是说用户不需要知道一个复杂的对象时如何创建的.用户只需要知道使用构造不同对象的方法(Director)就能得到一个完整的复杂对象的实例
 
-		* Builder :   给出的一个抽象接口,规范产品对象的各个组成部分的建造.这个接口先声明必须要实现的复杂对象的各个方法.留待他的实现类进行不同的实现.
-		* ConcreteBuilder : Builder的实现类,用以构造和装配该产品的各个部件.定义该产品的表示.
-		* Director : 构造的一个使用builder接口的对象,用以创建各个不同表示的实例类.
+* 建造者模式通常包含的几个角色
+	* Builder :   给出的一个抽象接口,规范产品对象的各个组成部分的建造.这个接口先声明必须要实现的复杂对象的各个方法.留待他的实现类进行不同的实现.
+	* ConcreteBuilder : Builder的实现类,用以构造和装配该产品的各个部件.定义该产品的表示.
+	* Director : 构造的一个使用builder接口的对象,用以创建各个不同表示的实例类.
 
-			* 作用一 : 隔离客户与对象的生产过程.
-			* 作用二 : 负责控制产品对象的生产过程.
-		* Product : 被构造的复杂对象.ConcreteBuilder创建该产品的内部表示并定义她的装配过程.
-	* 适用性:
+		* 作用一 : 隔离客户与对象的生产过程.
+		* 作用二 : 负责控制产品对象的生产过程.
+	* Product : 被构造的复杂对象.ConcreteBuilder创建该产品的内部表示并定义她的装配过程.
+# 二、适用性:
+ * 当创建复杂对象的算法应该独立于该对象的组成部分以及他们的装配方式时.
+ * 当构造过程必须允许被构造的对象有不同的表示时.
+# 三、优点和缺点
+  * 优点 : 
 
-		* 当创建复杂对象的算法应该独立于该对象的组成部分以及他们的装配方式时.
-		* 当构造过程必须允许被构造的对象有不同的表示时.
-	* 优点 : 
+	* 将复杂对象的创建步骤分解在不同的方法中,使得创建过程更加清晰,能够帮助我们更加精确的控制复杂对象的产生过程.
+	* 将产品的创建过程与产品本身分离开来,可以使用相同的创建过程来得到不同的产品.也就说细节依赖抽象.
+	* 每一个具体建造者都相互独立,而与其它的具体建造者无关,因此可以很方便的替换具体建造者或增加新的具体建造者.用户可以使用不同的具体建造者即可得到不同的产品对象.
+ * 缺点 : 
 
-		* 将复杂对象的创建步骤分解在不同的方法中,使得创建过程更加清晰,能够帮助我们更加精确的控制复杂对象的产生过程.
-		* 将产品的创建过程与产品本身分离开来,可以使用相同的创建过程来得到不同的产品.也就说细节依赖抽象.
-		* 每一个具体建造者都相互独立,而与其它的具体建造者无关,因此可以很方便的替换具体建造者或增加新的具体建造者.用户可以使用不同的具体建造者即可得到不同的产品对象.
-	* 缺点 : 
+	* 建造者模式所创建的产品一般具有较多的共同点,其组成部分相似,如果产品之间的差异性很大,则不适合使用建造者模式,因此其适用范围会受到一定的限制.
+	* 如果产品的内部变化复杂,可能会导致需要定义很多具体建造者类来实现这种变化.会导致系统变得很庞大.
 
-		* 建造者模式所创建的产品一般具有较多的共同点,其组成部分相似,如果产品之间的差异性很大,则不适合使用建造者模式,因此其适用范围会受到一定的限制.
-		* 如果产品的内部变化复杂,可能会导致需要定义很多具体建造者类来实现这种变化.会导致系统变得很庞大.
-
-* 总结
-   * 通过上?对建造者模式的使?，已经可以摸索出?点?得。那就是什么时候会选择这样的设计模
-  式，当： ?些基本物料不会变，?其组合经常变化的时候 ，就可以选择这样的设计模式来构建代码。
-   * 此设计模式满?了单?职责原则以及可复?的技术、建造者独?、易扩展、便于控制细节?险。但
-  同时当出现特别多的物料以及很多的组合后，类的不断扩展也会造成难以维护的问题。但这种设计
-  结构模型可以把?复的内容抽象到数据库中，按照需要配置。这样就可以减少代码中?量的?复。
+# 四、总结
+ * 通过上?对建造者模式的使?，已经可以摸索出?点?得。那就是什么时候会选择这样的设计模
+式，当： ?些基本物料不会变，?其组合经常变化的时候 ，就可以选择这样的设计模式来构建代码。
+ * 此设计模式满?了单?职责原则以及可复?的技术、建造者独?、易扩展、便于控制细节?险。但
+同时当出现特别多的物料以及很多的组合后，类的不断扩展也会造成难以维护的问题。但这种设计
+结构模型可以把?复的内容抽象到数据库中，按照需要配置。这样就可以减少代码中?量的?复。
